# SVF-Data-Race-Detection-Tool

./: Doxyfile  README.md  clean.sh
autoconf/: configure.ac
docs/: bugtools
lib/: CMakeLists.txt  Makefile
lib/RC/: CMakeLists.txt  Makefile
lib/RC/DCIRTL/: DCIInterceptors.cpp  DCIInterceptors.h  DCIInterface.cpp  DCIInterface.h  DCIRTL.cpp  DCIRTL.h  Makefile
lib/RC/RCInstr/: Makefile  RCInstr.cpp  Reorder.cpp  TSan.cpp
lib/RC/RTLCommon/: Makefile  RTLAtomic.h  RTLAtomicClang.h  RTLAtomicClang_other.h  RTLAtomicClang_x86.h  RTLAtomicMsvc.h  RTLInterception.h  RTLInterception_linux.cpp  RTLInterception_linux.h  RTLInternalDefs.h  RTLMutex.cpp  RTLMutex.h  RTLPlatform.h
lib/RC/StaticAnalysis/: BarrierAnalysis.cpp  BarrierAnalysis.h  CflReachabilityAnalysis.h  ContextSensitiveAliasAnalysis.cpp  ContextSensitiveAliasAnalysis.h  HeapRefinement.cpp  HeapRefinement.h  InterproceduralAnalysis.cpp  InterproceduralAnalysis.h  LocksetAnalysis.cpp  LocksetAnalysis.h  Makefile  MemoryPartitioning.cpp  MemoryPartitioning.h  MhpAnalysis.cpp  MhpAnalysis.h  MhpPathFinder.cpp  MhpPathFinder.h  PathCorrelationAnalysis.cpp  PathCorrelationAnalysis.h  PathRefinement.cpp  PathRefinement.h  RCAnnotaton.cpp  RCResult.cpp  RCResult.h  RCResultValidator.h  RCStat.cpp  RCStat.h  RCUtil.cpp  RCUtil.h  RaceComb.cpp  RaceComb.h  RaceCombPass.cpp  ResultValidator.cpp  ResultValidator.h  ThreadEscapeAnalysis.cpp  ThreadEscapeAnalysis.h  ThreadJoinRefinement.cpp  ThreadJoinRefinement.h
lib/RC/TSRTL/: Makefile  TSChecker.cpp  TSChecker.h  TSInterceptors.cpp  TSInterceptors.h  TSInterface.cpp  TSInterface.h  TSRTL.cpp  TSRTL.h
tests/: aliascheck.h  gen_latex.sh  runtest.sh  simple.tar.bz2  singlerun.sh
tools/: CMakeLists.txt  Makefile
tools/RC/: CMakeLists.txt  Makefile
tools/RC/RCInstr/: Makefile  rcinstr.cpp
tools/RC/StaticAnalysis/: Makefile  rc.cpp
(+538 files in other folders)
